# smartportfolio

./: QUICKSTART.md  README.md  SCRIPTS_GUIDE.md  pyproject.toml  requirements.txt
SmartPortfolio/: .gitignore  1_Stock_Screening.ipynb.ipynb  CONTRIBUTING.md  LICENSE
SmartPortfolio/notebooks/: 01_data_collection.ipynb  01b_technical_indicators.ipynb  02_stock_screening.ipynb  03_return_prediction.ipynb  04_portfolio_optimization.ipynb  05_performance_simulation.ipynb  06_dashboard.ipynb
SmartPortfolio/scripts/: run_backtest.py  run_optimization.py  run_screening.py
SmartPortfolio/tests/: test_data_collection.py  test_models.py
SmartPortfolio/utils/: data_helpers.py  visualization.py
database/: schema.sql
scripts/: run_data_collection.py  run_ml_prediction.py  run_technical_indicators.py  setup_database.py
tests/: test_portfolio.py  test_setup.py
utils/: database_connector.py  ml_helpers.py
